[tool.poetry]
name = "pld"
version = "0.1.0"
description = ""
authors = ["heeler <jamie.sherman@alleninstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightning = "^2.4.0"
torch = "2.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pld_launch = "pld.lightning_basic:training_example"
cuda_check = "pld.check_cuda:check_cuda"
